# plasma5-applet-buam

./: .travis.yml  CMakeLists.txt  README.md
archlinux/: PKGBUILD  plasma5-applet-buam.install
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: credentials.qml  main.qml
plugin/: CMakeLists.txt  buam.cpp  buam.h  qmldir
